# nzb-postproc

./: .woodpecker.yml  Cargo.toml
.codesight/: CODESIGHT.md
.forgejo/workflows/: ci.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  policy.yml
src/: detect.rs  lib.rs  pipeline.rs  unpack.rs
tests/fixtures/obfuscated_zip_par2/: release.par2
