[package]
name = "nzb-postproc"
version = "0.1.2"
edition = "2024"
description = "Post-processing pipeline: PAR2 verify/repair, archive extraction"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-postproc"

[dependencies]
nzb-core = { git = "https://github.com/AusAgentSmith-org/nzb-core.git", tag = "v0.1.3" }
tokio = { version = "1", features = ["rt", "sync", "process"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
rust-par2 = "0.1"
walkdir = "2"
zip = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
